# meleemajors.gg

./: .gitignore  CNAME  CONTRIBUTING.md  README.md  index.html  styles.css
.github/: FUNDING.yml
.github/workflows/: auto-update-tournaments.yml  static.yml
meleemajors/: css2  font-awesome.min.css  script1.9.6.js  style1.9.6.css
site/: calendar.ics  index.html  robots.txt  script.js  styles.css
site/api/v1/: tournaments.json  tournaments.schema.json
site/assets/favicon/: favicon.xcf
src/: index.html
ssg/: .env.example  Cargo.toml
ssg/src/: generate_gql.rs  index.html  mailing_list.rs  main.rs  placeholderTournaments.json  sampleRun.sh  sampleTournaments.json  sampleTournaments.jsonc  topPlayers.json  tournaments.json  update_rankings.rs  utils.rs
ssg/src/graphql/: getFeaturedPlayers.gql  getFeaturedPlayersTemplate.gql  getTournamentEntrants.gql  getTournamentEvent.gql  getTournamentInfo.gql  getTournamentName.gql  sample output.json  sampleOutput.json
ssg/src/html/: email.html  emailMessage.html  emailTemplate.html  footer.html  header.html  templateCard.html
