[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

[dependencies]
case_converter = "0.1.1"
chrono = "0.4.38"
chrono-tz = "0.9.0"
ffmpeg-sidecar = "1.1.0"
gql_client = "1.0.7"
icalendar = "0.16.1"
itertools = "0.13.0"
regex = "1.10.5"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
urlencoding = "2.1.3"
